byteBuffer updated commit